# PrimeX

./: .env.example  .env.production  .gitignore  2FA_IMPLEMENTATION.md  2FA_LOGIN_FLOW_TEST.md  ADMIN_GUIDE.md  ADMIN_PANEL_DISPLAY_FIX.md  ADMIN_SESSION_MANAGEMENT.md  AMARCO_REDESIGN_COMPLETE.md  AMARCO_UI_REDESIGN.md  ANDROID_TV_DELIVERY_SUMMARY.md  ANDROID_TV_INTEGRATION.md  ANDROID_TV_PRODUCTION_PLAN.md  API_DOCUMENTATION.md  API_RESPONSE_FIX.md  ARCHITECTURE_CLARIFICATION.md  BOOTSTRAP_SYSTEM.md  BUILD_INSTRUCTIONS.md  BUILD_VERIFICATION.md  CATEGORY_AND_UI_IMPROVEMENTS.md  CATEGORY_EDIT_FIX.md  CHANGELOG_V3.md  CHANNEL_SIDEBAR_FEATURE.md  CLIENT_APPS.md  CODE_ACTIVATION_FIX.md  COMPILATION_FIXES.md  CONTENT_ASSIGNMENT_FIX.md  CORE_FUNCTIONALITY_SUMMARY.md  CRITICAL_FIX.md  CRITICAL_FIX_APPLIED.md  CRITICAL_FIX_AUTO_ADMIN.md  DASHBOARD_UPGRADE_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS_FINAL.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOY_DEVICE_FEATURES.md  (+112 more)
.devcontainer/: devcontainer.json
android-tv-app/: .gitignore  ANDROID_TV_COMPATIBILITY_FIXED.md  ANDROID_TV_CRASH_FIX.md  APPLETV_REDESIGN_COMPLETE.md  APPLETV_REDESIGN_PROGRESS.md  AUTHENTICATION_FIX_TESTING.md  CHANNEL_BROWSER_OPTIMIZATIONS.md  COLOR_RESOURCE_FIXED.md  CRASH_FIX.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DNS_FIX_ANDROID_TV.md  DUPLICATE_STRINGS_FIXED.md  FINAL_COMPILATION_FIXES.md  FRAGMENT_CONVERSION_COMPLETE.md  GRADLE_SYNC_FIX.md  (+23 more)
android-tv-app/app/src/main/cpp/: CMakeLists.txt  native_security.cpp
(+346 files in other folders)
